# qefir

./: CMakeLists.txt  audioIO.cpp  dspPipeline.cpp  dspPipeline.h  midiIO.cpp  midiIO.h  qefir.cpp  qefir.h  sineTest.cpp  workerThread.cpp
include/: audioIO.h  dspPipeline.h  midiIO.h  workerThread.h
include/filters/: filterNode.h  svf.h
include/nodes/: node.h  oscillator.h
src/: audioIO.cpp  dspPipeline.cpp  midiIO.cpp  workerThread.cpp
src/filters/: filterNode.cpp  svf.cpp
src/nodes/: node.cpp  oscillator.cpp
